// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reports getReportRequestList returns report request info if succesful 1`] = `
Array [
  Object {
    "HasNext": true,
    "NextToken": NextToken {
      "action": "GetReportRequestList",
      "token": "2YgYW55IPQhcm5hbCBwbGVhc3VyZS4=",
    },
    "ReportRequestInfo": Object {
      "CompletedDate": 2011-02-17T23:44:48.000Z,
      "EndDate": 2011-02-13T02:10:39.000Z,
      "GeneratedReportId": "3538561173",
      "ReportProcessingStatus": "_DONE_",
      "ReportRequestId": "2291326454",
      "ReportType": "_GET_MERCHANT_LISTINGS_DATA_",
      "Scheduled": false,
      "StartDate": 2011-01-21T02:10:39.000Z,
      "StartedProcessingDate": 2011-02-17T23:44:43.000Z,
      "SubmittedDate": 2011-02-17T23:44:09.000Z,
    },
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`reports getReportRequestListByNextToken returns report request info if succesful 1`] = `
Array [
  Object {
    "HasNext": false,
    "NextToken": NextToken {
      "action": "GetReportRequestList",
      "token": "none",
    },
    "ReportRequestInfo": Object {
      "CompletedDate": undefined,
      "EndDate": 2009-02-13T02:10:39.000Z,
      "GeneratedReportId": undefined,
      "ReportProcessingStatus": "_SUBMITTED_",
      "ReportRequestId": "2291326454",
      "ReportType": "_GET_MERCHANT_LISTINGS_DATA_",
      "Scheduled": false,
      "StartDate": 2009-01-21T02:10:39.000Z,
      "StartedProcessingDate": undefined,
      "SubmittedDate": 2009-02-20T02:10:39.000Z,
    },
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`reports getServiceStatus returns a parsed model when the status response is valid 1`] = `
Array [
  Object {
    "Status": "GREEN",
    "Timestamp": "2020-05-06T08:22:23.582Z",
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`reports requestReport returns a parsed model when the response is valid 1`] = `
Array [
  Object {
    "CompletedDate": undefined,
    "EndDate": 2009-02-13T02:10:39.000Z,
    "GeneratedReportId": undefined,
    "ReportProcessingStatus": "_SUBMITTED_",
    "ReportRequestId": "2291326454",
    "ReportType": "_GET_MERCHANT_LISTINGS_DATA_",
    "Scheduled": false,
    "StartDate": 2009-01-21T02:10:39.000Z,
    "StartedProcessingDate": undefined,
    "SubmittedDate": 2009-02-20T02:10:39.000Z,
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;
